# LazyEvaluate

./: .gitmodules  CMakeLists.txt  LICENSE
LazyEvaluate/: Calculation.h  Term.h  ThreadPoolSingleton.h
tests/: test_lazy_evaluate.cpp
